added various user controls

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script src="scripts/main.js" type="module"></script>
 </head>
 <body>
+  <div id="controls_submission">
+    <p>Click this box to activate controls</p>
+  </div>
     <div id="render_container">
       <p id="telemetry_overlay">fps:</p>
     </div>
